# litsearchapp

./: .env.example  ARCHITECTURE.md  BACKEND_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_IMPLEMENTATION.md  DESIGN_SYSTEM_TEST_RESULTS.md  DESIGN_UPDATE_SUMMARY.md  EDGE_CASE_TEST_RESULTS.md  FINAL_STATUS.md  FRONTEND_DISCOVERY_FEATURES.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_READY.md  FRONTEND_SUMMARY.md  GETTING_STARTED.md  GOOGLE_SCHOLAR_IMPLEMENTATION_RESULTS.md  GOOGLE_SCHOLAR_SOLUTIONS.md  HOW_TO_RUN.md  IMPROVEMENTS.md  INDEX.md  NEW_SOURCES_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  READY_TO_USE.md  RESEARCH_RABBIT_FEATURES.md  SEARCH_TEST_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_REPORT.md  UCSB_ACCESS_GUIDE.md  UCSB_ACCESS_PLAN.md  UCSB_INTEGRATION_COMPLETE.md  UI_UX_IMPROVEMENTS.md  UI_UX_IMPROVEMENTS_SUMMARY.md  USAGE.md  WEB_ARCHITECTURE.md  WOS_SCHOLAR_INTEGRATION.md  arxiv_test.json  pyproject.toml  requirements.txt  (+11 more)
agents/: README.md  WORKFLOW-INTEGRATION.md  agent-0-orchestrator.md  agent-1-problem-framer.md  agent-2-competitive-mapper.md  agent-3-product-manager.md  agent-4-ux-designer.md  agent-5-system-architect.md  agent-6-engineer.md  agent-7-qa-engineer.md  agent-8-devops.md  agent-9-analytics.md
backend/: __init__.py  main.py  schemas.py
backend/services/: __init__.py  paper_service.py  pdf_service.py  visualization_service.py
database/: papers.db
docs/: PRD.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/playwright-report/: index.html
frontend/src/: App.css  App.css.backup  App.css.old  App.jsx  App.jsx.backup  index.css  professional-enhancements.css  styles.css  styles.css.old
frontend/tests/: design-system.spec.js  screenshot.spec.js  search-debug.spec.js  (+1 more)
src/: __init__.py  models.py
tests/: __init__.py  conftest.py
(+67 files in other folders)
